--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   display: flex;
   place-items: center;
   min-width: 320px;
+}
+
+* {
+  box-sizing: border-box;
 }
