--- a/src/shared/ui/auth-select/ui/styles.module.css
+++ b/src/shared/ui/auth-select/ui/styles.module.css
@@ -2,6 +2,7 @@
     min-width: 300px;
     min-height: 50px;
     border: 1px solid #697CA6;
+    color: #697CA6;
     background: transparent;
     font-family: 'Quicksand', sans-serif;
     font-style: normal;
