authorization fully complete

--- a/src/pages/register-page/register-step2/styles.module.css
+++ b/src/pages/register-page/register-step2/styles.module.css
@@ -11,8 +11,9 @@
     color: red;
     padding: 0;
     margin: 0;
-    height: 25px;
     margin-top: 5px;
+    min-height: 25px;
+    max-width: 300px;
 }
 
 .agreement {
