--- a/src/pages/register-page/register-step1/styles.module.css
+++ b/src/pages/register-page/register-step1/styles.module.css
@@ -11,6 +11,8 @@
     color: red;
     padding: 0;
     margin: 0;
-    height: 25px;
-    margin-top: 5px;
+    min-height: 20px;
+    margin-bottom: 10px;
+    margin-top: 3px;
+    max-width: 300px;
 }
