--- a/src/pages/signin-page/ui/styles.module.css
+++ b/src/pages/signin-page/ui/styles.module.css
@@ -12,3 +12,14 @@
     justify-content: center;
     align-items: center;
 }
+
+.error {
+    font-family: 'Quicksand', sans-serif;
+    font-size: 13px;
+    color: red;
+    padding: 0;
+    margin: 0;
+    margin-top: 5px;
+    min-height: 25px;
+    max-width: 300px;
+}
