--- a/src/widgets/work-header/ui/styles.module.css
+++ b/src/widgets/work-header/ui/styles.module.css
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 95%;
 }
 
 .iconImg {
@@ -67,6 +67,10 @@
     gap: 10px;
     padding-top: 15px;
     padding-bottom: 15px;
+}
+
+.fullName {
+    font-weight: 500;
 }
 
 .emailAndName {
