manager vrequests page

--- a/src/widgets/header/ui/styles.module.css
+++ b/src/widgets/header/ui/styles.module.css
@@ -8,7 +8,7 @@
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   max-width: 1920px;
   display: flex;
   justify-content: space-between;
@@ -23,7 +23,12 @@
 
 .navigation {
   display: flex;
+  align-items: center;
   list-style: none;
+}
+
+.logoContainer {
+  margin-right: 20px;
 }
 
 .nav-link {
