--- a/src/pages/dashboard/ui/styles.module.css
+++ b/src/pages/dashboard/ui/styles.module.css
@@ -7,52 +7,48 @@
 
 .mainWrapper {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     flex-grow: 1;
     height: 100%;
 }
 
-.sidebar {
-    width: 250px;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.sidebarBtn {
-    background: transparent;
-    border: none;
-    padding-left: 20px;
-    font-size: 16px;
+.content {
     width: 90%;
-    height: 40px;
-    transition: .2s;
-    border-radius: 7px;
-    font-weight: 550;
+    flex-grow: 1;
+    height: 100%;
 }
 
-.sidebarBtn:hover {
-    cursor: pointer;
-    background-color: #F1F5FF;
-}
-
-.orgInfo {
-    margin-top: 25px;
-    margin-bottom: 25px;
+.orgList {
     display: flex;
-    gap: 10px;
+    gap: 20px;
+    margin-top: 35px;
 }
 
-.orgInfo h1 {
-    font-size: 16px;
-    font-weight: 625;
+.orgHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 32px;
+    margin-bottom: 24px;
 }
 
-.orgInfo img {
-    height: 20px;
-    width: 20px;
+.orgHeader h1 {
+    font-size: 24px;
+}
+
+.orgHeader button {
+    background-color: #3A79FF;
+    color: white;
+    padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #F1F5FF;
+    font-weight: 600;
+    transition: .4s;
+}
 
+.orgHeader button:hover {
+    cursor: pointer;
+    background-color: white;
+    color: #3A79FF;
 }
