--- a/src/widgets/work-sidebar/ui/styles.module.css
+++ b/src/widgets/work-sidebar/ui/styles.module.css
@@ -4,6 +4,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
+    border-right: solid 1px rgb(191, 191, 191);
+}
+
+.sidebarContent {
+    margin-top: 30px;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .sidebarBtn {
@@ -14,8 +24,9 @@
     width: 90%;
     height: 40px;
     transition: .2s;
-    border-radius: 7px;
+    border-radius: 4px;
     font-weight: 550;
+    text-align: left;
 }
 
 .sidebarBtn:hover {
