--- a/src/pages/register-page/register-step2/styles.module.css
+++ b/src/pages/register-page/register-step2/styles.module.css
@@ -25,14 +25,14 @@
 
 .selectCustom {
     display: block;
-    width: 100%; /* Занимает всю доступную ширину */
+    width: 100%;
     height: calc(1.5em + .75rem + 2px);
     padding: .375rem 1.75rem .375rem .75rem;
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    background: #fff url('data:image/svg+xml;charset=UTF-8,<svg ...></svg>') no-repeat right .75rem center; /* Иконка стрелки */
+    background: #fff url('data:image/svg+xml;charset=UTF-8,<svg ...></svg>') no-repeat right .75rem center; 
     background-size: 8px 10px;
     border: 1px solid #ced4da;
     border-radius: .25rem;
@@ -45,12 +45,10 @@
     box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
   }
   
-  /* Скрывает стандартную стрелку для браузеров, которые её показывают */
+  
   .selectCustom::-ms-expand {
     display: none;
   }
-  
-  /* Кастомная стрелка для Firefox */
   .selectCustom:-moz-focusring {
     color: transparent;
     text-shadow: 0 0 0 #495057;
