по итогу кастомизировал position и календарь, но не показывает изменения

--- a/src/pages/register-page/register-step2/styles.module.css
+++ b/src/pages/register-page/register-step2/styles.module.css
@@ -53,3 +53,19 @@
     color: transparent;
     text-shadow: 0 0 0 #495057;
   }
+
+
+  .calendarCustom {
+    display: block;
+    width: 100%;
+    padding: .375rem 1.75rem .375rem .75rem;
+    font-size: 0.875rem;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  }
+  
+  .calendarCustom:focus {
+    border-color: #80bdff;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+  }
