vacancy forms functionality

--- a/src/pages/layouts/work-layout/ui/styles.module.css
+++ b/src/pages/layouts/work-layout/ui/styles.module.css
@@ -16,4 +16,14 @@
     flex-grow: 1;
     margin-top: 40px;
     margin-left: 80px;
+    margin-right: 80px;
+}
+
+.content h1 {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.content p {
+    font-size: 14px;
 }
