--- a/src/pages/hr/form/create/ui/styles.module.css
+++ b/src/pages/hr/form/create/ui/styles.module.css
@@ -11,6 +11,13 @@
     flex-direction: column;
 }
 
+.fieldList {
+    max-height: 80vh;
+    padding-left: 40px;
+    padding-right: 40px;
+    overflow-y: auto;
+}
+
 .field {
     margin-top: 20px;
     margin-bottom: 20px;
@@ -18,6 +25,7 @@
     border-radius: 8px;
     padding: 15px;
     padding-left: 30px;
+    transition: all 0.2s ease-out;
 }
 
 .fieldUpperPart {
