--- a/src/shared/ui/blue-button/styles.module.css
+++ b/src/shared/ui/blue-button/styles.module.css
@@ -6,6 +6,9 @@
     border-radius: 5px;
     font-weight: 600;
     transition: .4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .btn:hover {
