--- a/src/pages/manager/vacancy-requests/list/ui/styles.module.css
+++ b/src/pages/manager/vacancy-requests/list/ui/styles.module.css
@@ -24,6 +24,7 @@
 .content {
     flex-grow: 1;
     display: flex;
+    border-top: 1px solid rgb(191, 191, 191);
 }
 
 .vrList {
@@ -85,4 +86,30 @@
 
 .dataItem span ul {
     margin-left: 15px;
+}
+
+.detailInfo {
+    max-height: 100%;
+    overflow-y: auto;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.sections {
+    display: flex;
+    gap: 25px;
+    margin-top: 20px;
+}
+
+.sect {
+    font-weight: 550;
+    font-size: 18px;
+}
+
+.sect:hover {
+    cursor: pointer;
+}
+
+.underline {
+    text-decoration: underline;
 }
