--- a/src/pages/hr/applications/ui/styles.module.css
+++ b/src/pages/hr/applications/ui/styles.module.css
@@ -43,23 +43,6 @@
     height: 100%;
 }
 
-.requestItem {
-    border-bottom: 1px solid rgb(191, 191, 191);
-    padding: 15px;
-    text-align: left;
-    transition: .1s;
-}
-
-.requestItem:hover {
-    background-color: aliceblue;
-    cursor: pointer;
-}
-
-.requestItem h2 {
-    font-size: 18px;
-    font-weight: 550;
-}
-
 h2 {
     font-weight: 550;
 }
@@ -115,4 +98,22 @@ h2 {
     display: flex;
     gap: 20px;
     margin-top: 20px;
+}
+
+.modalWrapper {
+    max-height: 80vh;
+    width: 80vw;
+    min-width: 700px;
+    max-width: 1200px;
+    display: flex;
+}
+
+.original {
+    width: 50%;
+    border: 1px solid rgb(191, 191, 191);
+}
+
+.copy {
+    width: 50%;
+    border: 1px solid rgb(191, 191, 191);
 }
