--- a/src/pages/hr/form/list/ui/styles.module.css
+++ b/src/pages/hr/form/list/ui/styles.module.css
@@ -24,19 +24,31 @@
 
 .info {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 80px;
+    flex-wrap: wrap;
+    margin-top: 35px;
+    gap: 25px;
 }
 
 .info h1 {
-    font-size: 24px;
+    font-size: 16px;
     font-weight: 600;
 }
 
 .info p {
-    text-align: center;
     max-width: 500px;
     margin-top: 10px;
+}
+
+.formItem {
+    width: 250px;
+    text-align: left;
+    padding: 15px;
+    border: 1px rgb(191, 191, 191) solid;
+    border-radius: 5px;
+    transition: .4s;
+}
+
+.formItem:hover {
+    cursor: pointer;
+    background-color: rgba(188, 199, 255, 0.75);
 }
