--- a/src/pages/hr/vacancies/list/ui/styles.module.css
+++ b/src/pages/hr/vacancies/list/ui/styles.module.css
@@ -42,8 +42,12 @@
     background-color: transparent;
 }
 
-.table th {
+.table td {
     font-weight: 500;
+}
+
+.table th {
+    font-weight: 550;
 }
 
 .table th:last-child, .table td:last-child {
@@ -52,8 +56,8 @@
 
 .tableContainer {
     overflow-x: auto;
-    overflow-y: auto; 
-    max-height: 500px; 
+    max-height: 500px;
+    overflow-y: auto;
 }
 
 .status {
