--- a/src/pages/hr/resumes/ui/styles.module.css
+++ b/src/pages/hr/resumes/ui/styles.module.css
@@ -69,6 +69,34 @@
 .fileLine {
     display: flex;
     gap: 20px;
+    width: 700px;
+}
+
+.fileUploader {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    max-width: 700px;
+    width: 700px;
+    height: 200px;
+    padding-left: 20px;
+    padding-right: 20px;
+    gap: 20px;
+    overflow-x: auto;
+    text-align: center;
+}
+
+.fileList { 
+    gap: 20px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.fileItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .inp {
@@ -95,4 +123,31 @@
     justify-content: center; 
     gap: 20px;
     margin-top: 30px;
+}
+
+.delButton {
+    outline: none;
+    border: none;
+    background: none;
+}
+
+.delButton:hover {
+    cursor: pointer;
+}
+
+.fileUploadButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3A79FF;
+    color: white;
+    font-size: 14px;
+    height: 25px;
+    width: 150px;
+    border-radius: 3px;
+    margin-bottom: 20px;
+}
+
+.fileUploadButton:hover {
+    cursor: pointer;
 }
